buildscript {
    ext {
        jena_version = '3.11.0'
        milton_version = '2.7.4.8'
        mockitoVersion = '2.23.0'
        jacksonVersion = '2.9.8'
    }
}

plugins {
    id 'java'
    id 'io.franzbecker.gradle-lombok' version '2.0'
    id 'application'
    id 'jacoco'
    id  'com.github.spotbugs' version '1.6.10'
    id "org.owasp.dependencycheck" version "5.0.0-M3.1"
}

group 'io.fairspace'
version '1.0-SNAPSHOT'

compileJava {
    sourceCompatibility = 11
    targetCompatibility = 11
}

application {
    mainClassName = "io.fairspace.saturn.App"
}

repositories {
    mavenCentral()

    maven {
        url "http://dl.bintray.com/milton/Milton"
    }
    
    maven {
        url "https://raw.githubusercontent.com/DICE-UNC/DICE-Maven/master/releases"
    }
}

dependencies {
    implementation "org.apache.jena:jena-fuseki-main:${jena_version}"
    implementation "org.apache.jena:jena-text:${jena_version}"
    implementation "org.apache.jena:jena-text-es:${jena_version}"
    implementation "io.milton:milton-server-ce:${milton_version}"
    implementation 'com.nimbusds:nimbus-jose-jwt:7.1'
    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${jacksonVersion}"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"
    implementation "com.sparkjava:spark-core:2.9.0"
    implementation 'com.pivovarit:throwing-function:1.5.0'
    implementation 'com.google.guava:guava:27.1-jre'
    implementation 'org.topbraid:shacl:1.0.1'
    implementation 'org.apache.logging.log4j:log4j-to-slf4j:2.11.1'
    implementation 'com.io-informatics.oss:jackson-jsonld:0.1.1'
    implementation 'org.irods.jargon:jargon-core:4.3.0.1-RELEASE'

    testImplementation "junit:junit:4.12"
    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
    testImplementation group: 'com.mockrunner', name: 'mockrunner', version: '2.0.1', ext: 'pom'
    testImplementation(group: 'com.mockrunner', name: 'mockrunner-servlet', version: '2.0.1') {
        exclude group: 'org.apache.tomcat'
    }
    testImplementation 'com.github.stefanbirkner:system-rules:1.19.0'
    spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.8.0'
}

jacocoTestReport {
    reports {
        xml.enabled false
        csv.enabled true
    }
}

apply plugin: 'com.github.spotbugs'

spotbugs {
  toolVersion = '3.1.12'
  effort = "max"
  reportLevel = "low"
  ignoreFailures = true
}

tasks.withType(com.github.spotbugs.SpotBugsTask) {
    reports {
        xml.enabled = false
        html.enabled = true
    }
}
